[project]
name = "Vault-Demo"
version = "0.1.0"
description = "Python script for demoing Vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "cryptography>=45.0.5",
    "flask>=3.1.1",
    "logger>=1.4",
    "requests>=2.32.4",
]

# stole this ruff config from a different project
[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "UP", # pyupgrade
]
ignore = [
    "S104", # Binding to all interfaces
]
